--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,4 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<!--
+Mischa Hondius
+6053017
+-->
+    
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="nl.mprog.Ghost" >
 
@@ -13,7 +19,6 @@
             android:screenOrientation="portrait" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -24,7 +29,15 @@
         </activity>
         <activity
             android:name=".HighScores"
-            android:label="@string/title_activity_high_scores" >
+            android:label="@string/title_activity_high_scores"
+            android:screenOrientation="portrait" >
+            >
+        </activity>
+        <activity
+            android:name=".first_Time"
+            android:label="@string/title_activity_first__time"
+            android:screenOrientation="portrait" >
+            >
         </activity>
     </application>
 
