--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,18 +27,18 @@ Mischa Hondius
             </intent-filter>
         </activity>
         <activity
-            android:name=".change_players"
+            android:name=".ChangePlayersActivity"
             android:label="@string/title_activity_change_players"
             android:screenOrientation="portrait" >
         </activity>
         <activity
-            android:name=".HighScores"
+            android:name=".HighScoresActivity"
             android:label="@string/title_activity_high_scores"
             android:screenOrientation="portrait" >
             >
         </activity>
         <activity
-            android:name=".first_Time"
+            android:name=".FirstTimeActivity"
             android:label="@string/title_activity_first__time"
             android:screenOrientation="portrait" >
             >
